# MS_DF_ComputerVision_Project

./: .gitignore  ComputerVisionProject.ipynb  Dockerfile  README.md  pyproject.toml
.ipynb_checkpoints/: resnet50-cifar10_notebook-checkpoint.ipynb
api/: Image_prediction_final.py  effnetb0_cifar10_v1.py  image_clf_test.py  imagine_test.py  imgclf_effnetb0_cifar10_v1_model.py  imgclf_resnet50_cifar10_v1_model.py  main.py  prediction.py  preprocess.py  resnet50_cifar10_v1.py
notebooks/: 2_train_effnetb0_cifar10.ipynb  ComputerVisionProject.ipynb  Image_prediction_draft1.ipynb  Image_prediction_final.ipynb  Image_prediction_final.py  efficientnetb0-cifar10_notebook.ipynb
src/: effnetb0-cifar10_notebook.py  effnetb0-cifar10_training.py  main.py  resnet50-cifar10_notebook.py  train_effnetb0-cifar10.py  train_resnet50-cifar10.py
training/: train_resnet50-cifar10.py
